first part of the main

--- a/index.html
+++ b/index.html
@@ -14,23 +14,32 @@
 </head>
 <body>
     <header class="margin-bt">
-        <div class="container">
-            <div class="disp-flex-row">
-                <img id="logo" class="padd10" src="img/logo.svg" alt="logo">
-                <div class="padd10">
-                    <div class="burger">
-                        <i class="fa-solid fa-bars"></i>
-                    </div>
-                    <ul class="nav-bar disp-flex-row">
-                        <li><a href="">Planning</a></li>
-                        <li><a href="">Testimonials</a></li>
-                        <li><a href="">Features</a></li>
-                        <li><a href="">About Us</a></li>
-                        <li><a class="button white-bt" href="">Get Started</a></li>
-                    </ul>
+        <div class="disp-flex-row container">
+            <img id="logo" class="padd10" src="img/logo.svg" alt="logo">
+            <div class="padd10">
+                <div class="burger">
+                    <i class="fa-solid fa-bars"></i>
                 </div>
+                <ul class="nav-bar disp-flex-row">
+                    <li><a href="">Planning</a></li>
+                    <li><a href="">Testimonials</a></li>
+                    <li><a href="">Features</a></li>
+                    <li><a href="">About Us</a></li>
+                    <li><a class="button border-r white-bt" href="">Get Started</a></li>
+                </ul>
             </div>
         </div>
     </header>
+
+    <main>
+        <div class="container padd10 disp-flex-column">
+            <div class="bg-lightblue border-r big-box margin-bt"></div>
+            <div class="bg-lightblue border-r small-box margin-bt"></div>
+            <div class="bg-lightblue border-r small-box margin-bt"></div>
+            <div class="bg-lightblue border-r small-box margin-bt"></div>
+            <div class="bg-lightblue border-r small-box margin-bt"></div>
+        </div>
+
+    </main>
 </body>
 </html>
