--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     </header>
 
     <main>
+        <!--lightblue or "1st" part-->
         <div class="container padd10 disp-flex-column">
             <div class="bg-lightblue border-r big-box margin-bt"></div>
             <div class="bg-lightblue border-r small-box margin-bt"></div>
@@ -40,6 +41,20 @@
             <div class="bg-lightblue border-r small-box margin-bt"></div>
         </div>
 
+        <!--lightpurple or "2nd" part-->
+        <div class="bg-lightpurple margin-bt">
+            <div class="container padding-bt purple-flex">
+                <div>
+                    <img class="place-holder" src="img/item1.svg" alt="">
+                    <h2></h2>
+                    <p></p>
+                </div>
+                <div class="bg-white border-r disp-flex-column">
+                    <img class="place-holder" src="img/item1.svg" alt="">
+                    <a class="round-bt lightpurple-bt margin-bt" href=""><i class="fa-solid fa-arrow-down"></i></a>
+                </div> 
+            </div>
+        </div>
     </main>
 </body>
 </html>
