--- a/index.html
+++ b/index.html
@@ -55,6 +55,25 @@
                 </div> 
             </div>
         </div>
+
+        <!--testimonials-->
+        <div class="container disp-flex-column">
+            <h3></h3>
+            <h2></h2>
+            <p></p>
+            <div class="bg-lightpurple border-r disp-flex-column testimonials margin-bt">
+                <img src="img/logo.svg" alt="">
+                <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde ut reiciendis culpa provident minima ad nulla, molestiae harum dolore inventore quis quos similique temporibus. Dolorem velit laudantium iste odit quae.</span>
+            </div>
+            <div class="bg-lightpurple border-r disp-flex-column testimonials margin-bt">
+                <img src="img/logo.svg" alt="">
+                <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde ut reiciendis culpa provident minima ad nulla, molestiae harum dolore inventore quis quos similique temporibus. Dolorem velit laudantium iste odit quae.</span>
+            </div>
+            <div class="bg-lightpurple border-r disp-flex-column testimonials margin-bt">
+                <img src="img/logo.svg" alt="">
+                <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde ut reiciendis culpa provident minima ad nulla, molestiae harum dolore inventore quis quos similique temporibus. Dolorem velit laudantium iste odit quae.</span>
+            </div>
+        </div>
     </main>
 </body>
 </html>
