--- a/index.html
+++ b/index.html
@@ -33,12 +33,14 @@
 
     <main>
         <!--lightblue or "1st" part-->
-        <div class="container padd10 disp-flex-column">
-            <div class="bg-lightblue border-r big-box margin-bt"></div>
-            <div class="bg-lightblue border-r small-box margin-bt"></div>
-            <div class="bg-lightblue border-r small-box margin-bt"></div>
-            <div class="bg-lightblue border-r small-box margin-bt"></div>
-            <div class="bg-lightblue border-r small-box margin-bt"></div>
+        <div class="first-part">
+            <div class="container padd10 disp-flex-column">
+                <div class="bg-lightblue border-r big-box margin-bt"></div>
+                <div class="bg-lightblue border-r small-box margin-bt"></div>
+                <div class="bg-lightblue border-r small-box margin-bt"></div>
+                <div class="bg-lightblue border-r small-box margin-bt"></div>
+                <div class="bg-lightblue border-r small-box margin-bt"></div>
+            </div>
         </div>
 
         <!--lightpurple or "2nd" part-->
@@ -49,7 +51,7 @@
                     <h2></h2>
                     <p></p>
                 </div>
-                <div class="bg-white border-r disp-flex-column">
+                <div class="bg-white border-r disp-flex-column align-center">
                     <img class="place-holder" src="img/item1.svg" alt="">
                     <a class="round-bt lightpurple-bt margin-bt" href=""><i class="fa-solid fa-arrow-down"></i></a>
                 </div> 
@@ -74,6 +76,65 @@
                 <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde ut reiciendis culpa provident minima ad nulla, molestiae harum dolore inventore quis quos similique temporibus. Dolorem velit laudantium iste odit quae.</span>
             </div>
         </div>
+
+        <!--benefits-->
+        <div class="bg-lightpurple margin-bt">
+            <div class="container padd10 benefits-dad">
+                <h3 class="margin-bt"></h3>
+                <div class="disp-flex-column">
+                    <div class="bg-white border-r benefits margin-bt">
+                        <div class="padd10">
+                            <h2>01</h2>
+                            <h3></h3>
+                            <p></p>
+                            <a href="">more</a>
+                        </div>
+                    </div>
+                    <div class="bg-white border-r benefits margin-bt">
+                        <div class="padd10">
+                            <h2>01</h2>
+                            <h3></h3>
+                            <p></p>
+                            <a href="">more</a>
+                        </div>
+                    </div>
+                    <div class="bg-white border-r benefits margin-bt">
+                        <div class="padd10">
+                            <h2>01</h2>
+                            <h3></h3>
+                            <p></p>
+                            <a href="">more</a>
+                        </div>
+                    </div>
+                    <div class="bg-white border-r benefits margin-bt">
+                        <div class="padd10">
+                            <h2>01</h2>
+                            <h3></h3>
+                            <p></p>
+                            <a href="">more</a>
+                        </div>
+                    </div>
+                    <div class="bg-white border-r benefits margin-bt">
+                        <div class="padd10">
+                            <h2>01</h2>
+                            <h3></h3>
+                            <p></p>
+                            <a href="">more</a>
+                        </div>
+                    </div>
+                    <div class="bg-white border-r benefits margin-bt">
+                        <div class="padd10">
+                            <h2>01</h2>
+                            <h3></h3>
+                            <p></p>
+                            <a href="">more</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!--about us-->
     </main>
 </body>
 </html>
