--- a/index.html
+++ b/index.html
@@ -135,6 +135,19 @@
         </div>
 
         <!--about us-->
+        <div class="container disp-flex-column about-us">
+            <div>
+                <h2>about us</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure nulla odit, ab incidunt, quia dicta a sint accusamus molestiae veniam ipsum velit? Dolorum asperiores nam debitis enim, natus deleniti iusto?</p>
+                <br>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, placeat quibusdam a exercitationem odit assumenda maxime sunt cupiditate molestiae dolore dolorum modi omnis beatae impedit debitis magnam possimus molestias quia?</p>
+            </div>
+            <div class="disp-flex-column">
+                <img src="img/item1.svg" alt="">
+                <p></p>
+                <a href=""></a>
+            </div>
+        </div>
     </main>
 </body>
 </html>
