first part complete

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header class="margin-bt">
         <div class="disp-flex-row container">
-            <img id="logo" class="padd10" src="img/logo.svg" alt="logo">
+            <img id="logo" class="padd10" src="img/logo.png" alt="logo">
             <div class="padd10">
                 <div class="burger">
                     <i class="fa-solid fa-bars"></i>
@@ -25,7 +25,7 @@
                     <li><a href="">Testimonials</a></li>
                     <li><a href="">Features</a></li>
                     <li><a href="">About Us</a></li>
-                    <li><a class="button border-r white-bt" href="">Get Started</a></li>
+                    <li><a class="button border-r white-btn" href="">Get Started</a></li>
                 </ul>
             </div>
         </div>
@@ -35,17 +35,40 @@
         <!--lightblue or "1st" part-->
         <div class="first-part">
             <div class="container padd10 disp-flex-column">
-                <div class="bg-lightblue border-r big-box margin-bt"></div>
-                <div class="bg-lightblue border-r small-box margin-bt"></div>
-                <div class="bg-lightblue border-r small-box margin-bt"></div>
-                <div class="bg-lightblue border-r small-box margin-bt"></div>
-                <div class="bg-lightblue border-r small-box margin-bt"></div>
+                <div class="bg-lightblue border-r big-box margin-btm disp-flex-column padd40">
+                    <div class="margin-btm big-p">
+                        <h3 class="margin-btm">Get a demo application</h3>
+                        <p class="margin-btm">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error dolorum suscipit assumenda numquam eligendi delectus magnam,</p>
+                        <a class="button bl-btn border-r" href=""><i class="fa-brands fa-apple"></i> App store</a>
+                    </div>
+                    <img src="img/phone.png" alt="">
+                </div>
+                <div class="padd40 bg-lightblue border-r small-box margin-btm">
+                    <i class="margin-btm icon fa-solid fa-file-code"></i>
+                    <h3 class="margin-btm">Clean Code</h3>
+                    <p class="margin-btm">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione nobis, architecto ad dolore quod, facere totam quas recusandae blanditiis.</p>
+                </div>
+                <div class="padd40 bg-lightblue border-r small-box margin-btm">
+                    <i class="margin-btm icon fa-solid fa-compass-drafting"></i>
+                    <h3 class="margin-btm">Web design</h3>
+                    <p class="margin-btm">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione nobis, architecto ad dolore quod, facere totam quas recusandae blanditiis.</p>
+                </div>
+                <div class="padd40 bg-lightblue border-r small-box margin-btm">
+                    <i class="margin-btm icon fa-solid fa-laptop-code"></i>
+                    <h3 class="margin-btm">Developement</h3>
+                    <p class="margin-btm">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione nobis, architecto ad dolore quod, facere totam quas recusandae blanditiis.</p>
+                </div>
+                <div class="padd40 bg-lightblue border-r small-box margin-btm">
+                    <i class="margin-btm icon fa-solid fa-bullhorn"></i>
+                    <h3 class="margin-btm">Branding</h3>
+                    <p class="margin-btm">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione nobis, architecto ad dolore quod, facere totam quas recusandae blanditiis.</p>
+                </div>
             </div>
         </div>
 
         <!--lightpurple or "2nd" part-->
-        <div class="bg-lightpurple margin-bt">
-            <div class="container padding-bt purple-flex">
+        <div class="bg-lightpurple margin-btm">
+            <div class="container padding-btm purple-flex">
                 <div>
                     <img class="place-holder" src="img/item1.svg" alt="">
                     <h2></h2>
@@ -53,7 +76,7 @@
                 </div>
                 <div class="bg-white border-r disp-flex-column align-center">
                     <img class="place-holder" src="img/item1.svg" alt="">
-                    <a class="round-bt lightpurple-bt margin-bt" href=""><i class="fa-solid fa-arrow-down"></i></a>
+                    <a class="round-btn lightpurple-btn margin-btm" href=""><i class="fa-solid fa-arrow-down"></i></a>
                 </div> 
             </div>
         </div>
@@ -63,26 +86,26 @@
             <h3></h3>
             <h2></h2>
             <p></p>
-            <div class="bg-lightpurple border-r disp-flex-column testimonials margin-bt">
+            <div class="bg-lightpurple border-r disp-flex-column testimonials margin-btm">
                 <img src="img/logo.svg" alt="">
                 <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde ut reiciendis culpa provident minima ad nulla, molestiae harum dolore inventore quis quos similique temporibus. Dolorem velit laudantium iste odit quae.</span>
             </div>
-            <div class="bg-lightpurple border-r disp-flex-column testimonials margin-bt">
+            <div class="bg-lightpurple border-r disp-flex-column testimonials margin-btm">
                 <img src="img/logo.svg" alt="">
                 <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde ut reiciendis culpa provident minima ad nulla, molestiae harum dolore inventore quis quos similique temporibus. Dolorem velit laudantium iste odit quae.</span>
             </div>
-            <div class="bg-lightpurple border-r disp-flex-column testimonials margin-bt">
+            <div class="bg-lightpurple border-r disp-flex-column testimonials margin-btm">
                 <img src="img/logo.svg" alt="">
                 <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde ut reiciendis culpa provident minima ad nulla, molestiae harum dolore inventore quis quos similique temporibus. Dolorem velit laudantium iste odit quae.</span>
             </div>
         </div>
 
         <!--benefits-->
-        <div class="bg-lightpurple margin-bt">
+        <div class="bg-lightpurple margin-btm">
             <div class="container padd10 benefits-dad">
-                <h3 class="margin-bt"></h3>
+                <h3 class="margin-btm"></h3>
                 <div class="disp-flex-column">
-                    <div class="bg-white border-r benefits margin-bt">
+                    <div class="bg-white border-r benefits margin-btm">
                         <div class="padd10">
                             <h2>01</h2>
                             <h3></h3>
@@ -90,7 +113,7 @@
                             <a href="">more</a>
                         </div>
                     </div>
-                    <div class="bg-white border-r benefits margin-bt">
+                    <div class="bg-white border-r benefits margin-btm">
                         <div class="padd10">
                             <h2>01</h2>
                             <h3></h3>
@@ -98,7 +121,7 @@
                             <a href="">more</a>
                         </div>
                     </div>
-                    <div class="bg-white border-r benefits margin-bt">
+                    <div class="bg-white border-r benefits margin-btm">
                         <div class="padd10">
                             <h2>01</h2>
                             <h3></h3>
@@ -106,7 +129,7 @@
                             <a href="">more</a>
                         </div>
                     </div>
-                    <div class="bg-white border-r benefits margin-bt">
+                    <div class="bg-white border-r benefits margin-btm">
                         <div class="padd10">
                             <h2>01</h2>
                             <h3></h3>
@@ -114,7 +137,7 @@
                             <a href="">more</a>
                         </div>
                     </div>
-                    <div class="bg-white border-r benefits margin-bt">
+                    <div class="bg-white border-r benefits margin-btm">
                         <div class="padd10">
                             <h2>01</h2>
                             <h3></h3>
@@ -122,7 +145,7 @@
                             <a href="">more</a>
                         </div>
                     </div>
-                    <div class="bg-white border-r benefits margin-bt">
+                    <div class="bg-white border-r benefits margin-btm">
                         <div class="padd10">
                             <h2>01</h2>
                             <h3></h3>
