--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Document</title>
 </head>
 <body>
-    <header class="margin-bt">
+    <header class="margin-btm">
         <div class="disp-flex-row container">
             <img id="logo" class="padd10" src="img/logo.png" alt="logo">
             <div class="padd10">
@@ -34,7 +34,7 @@
     <main>
         <!--lightblue or "1st" part-->
         <div class="first-part">
-            <div class="container padd10 disp-flex-column">
+            <div class="container padd10 disp-flex-column ">
                 <div class="bg-lightblue border-r big-box margin-btm disp-flex-column padd40">
                     <div class="margin-btm big-p">
                         <h3 class="margin-btm">Get a demo application</h3>
@@ -68,14 +68,16 @@
 
         <!--lightpurple or "2nd" part-->
         <div class="bg-lightpurple margin-btm">
-            <div class="container padding-btm purple-flex">
-                <div>
-                    <img class="place-holder" src="img/item1.svg" alt="">
-                    <h2></h2>
-                    <p></p>
+            <div class="container padd40 purple-flex planning">
+                <div class="planning1">
+                    <img src="img/planning1.png" alt="">
+                    <h2 class="margin-btm">Strategic Planning</h2>
+                    <p class="margin-btm">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime illum nostrum asperiores debitis? Vitae atque id perspiciatis nostrum magni at officia eum voluptatem unde! Provident iusto consequatur aspernatur vero tempore.</p>
                 </div>
-                <div class="bg-white border-r disp-flex-column align-center">
-                    <img class="place-holder" src="img/item1.svg" alt="">
+                <div class="padd10 bg-white border-r disp-flex-column align-center">
+                    <img class="place-holder" src="img/planning2.png" alt="">
+                    <h2 class="margin-btm">App Developement</h2>
+                    <p class="margin-btm">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum nostrum nam, nesciunt adipisci ullam blanditiis, ea similique quam, facere qui eos unde iusto harum quae. Alias quas itaque atque id?</p>
                     <a class="round-btn lightpurple-btn margin-btm" href=""><i class="fa-solid fa-arrow-down"></i></a>
                 </div> 
             </div>
@@ -83,19 +85,19 @@
 
         <!--testimonials-->
         <div class="container disp-flex-column">
-            <h3></h3>
-            <h2></h2>
-            <p></p>
+            <h3 class="margin-btm">TESTIMONIALS</h3>
+            <h2 class="margin-btm">We are committed experts partners</h2>
+            <p class="margin-btm">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, praesentium dolorem modi incidunt excepturi at eaque voluptatibus dolorum quo. Neque animi necessitatibus pariatur at aspernatur dolorem natus obcaecati ea doloremque.</p>
             <div class="bg-lightpurple border-r disp-flex-column testimonials margin-btm">
-                <img src="img/logo.svg" alt="">
+                <img src="img/testimonial1.jpg" alt="">
                 <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde ut reiciendis culpa provident minima ad nulla, molestiae harum dolore inventore quis quos similique temporibus. Dolorem velit laudantium iste odit quae.</span>
             </div>
             <div class="bg-lightpurple border-r disp-flex-column testimonials margin-btm">
-                <img src="img/logo.svg" alt="">
+                <img src="img/testimonial2.jpg" alt="">
                 <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde ut reiciendis culpa provident minima ad nulla, molestiae harum dolore inventore quis quos similique temporibus. Dolorem velit laudantium iste odit quae.</span>
             </div>
             <div class="bg-lightpurple border-r disp-flex-column testimonials margin-btm">
-                <img src="img/logo.svg" alt="">
+                <img src="img/testimonial3.jpg" alt="">
                 <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde ut reiciendis culpa provident minima ad nulla, molestiae harum dolore inventore quis quos similique temporibus. Dolorem velit laudantium iste odit quae.</span>
             </div>
         </div>
