--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="first-part">
             <div class="container padd10 disp-flex-column ">
                 <div class="bg-lightblue border-r big-box margin-btm disp-flex-column padd40">
-                    <div class="margin-btm big-p">
+                    <div class="margin-btm big-p disp-flex-column">
                         <h3 class="margin-btm">Get a demo application</h3>
                         <p class="margin-btm">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error dolorum suscipit assumenda numquam eligendi delectus magnam,</p>
                         <a class="button bl-btn border-r" href=""><i class="fa-brands fa-apple"></i> App store</a>
@@ -84,75 +84,84 @@
         </div>
 
         <!--testimonials-->
-        <div class="container disp-flex-column">
+        <div class="margin-auto container disp-flex-column big-testimonials">
             <h3 class="margin-btm">TESTIMONIALS</h3>
             <h2 class="margin-btm">We are committed experts partners</h2>
             <p class="margin-btm">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, praesentium dolorem modi incidunt excepturi at eaque voluptatibus dolorum quo. Neque animi necessitatibus pariatur at aspernatur dolorem natus obcaecati ea doloremque.</p>
             <div class="bg-lightpurple border-r disp-flex-column testimonials margin-btm">
                 <img src="img/testimonial1.jpg" alt="">
-                <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde ut reiciendis culpa provident minima ad nulla, molestiae harum dolore inventore quis quos similique temporibus. Dolorem velit laudantium iste odit quae.</span>
+                <div>
+                    <div><i class="fa-solid fa-quote-left"></i> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde ut reiciendis culpa provident minima ad nulla, molestiae harum dolore inventore quis quos similique temporibus. Dolorem velit laudantium iste odit quae. <i class="fa-solid fa-quote-right"></i></div>
+                    <strong class="test-name">NAT REYNOLDS</strong>
+                </div>
             </div>
             <div class="bg-lightpurple border-r disp-flex-column testimonials margin-btm">
                 <img src="img/testimonial2.jpg" alt="">
-                <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde ut reiciendis culpa provident minima ad nulla, molestiae harum dolore inventore quis quos similique temporibus. Dolorem velit laudantium iste odit quae.</span>
+                <div>
+                    <div><i class="fa-solid fa-quote-left"></i> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde ut reiciendis culpa provident minima ad nulla, molestiae harum dolore inventore quis quos similique temporibus. Dolorem velit laudantium iste odit quae. <i class="fa-solid fa-quote-right"></i></div>
+                    <strong class="test-name">CELIA ALMEDA</strong>
+                </div>
             </div>
             <div class="bg-lightpurple border-r disp-flex-column testimonials margin-btm">
                 <img src="img/testimonial3.jpg" alt="">
-                <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde ut reiciendis culpa provident minima ad nulla, molestiae harum dolore inventore quis quos similique temporibus. Dolorem velit laudantium iste odit quae.</span>
+                <div>
+                    <div><i class="fa-solid fa-quote-left"></i> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde ut reiciendis culpa provident minima ad nulla, molestiae harum dolore inventore quis quos similique temporibus. Dolorem velit laudantium iste odit quae. <i class="fa-solid fa-quote-right"></i></div>
+                    <strong class="test-name">BOB ROBERTS</strong>
+                </div>
             </div>
         </div>
 
         <!--benefits-->
         <div class="bg-lightpurple margin-btm">
-            <div class="container padd10 benefits-dad">
-                <h3 class="margin-btm"></h3>
+            <div class="container benefits-dad">
+                <h3 class="margin-btm">Benefits of working with us</h3>
                 <div class="disp-flex-column">
                     <div class="bg-white border-r benefits margin-btm">
-                        <div class="padd10">
-                            <h2>01</h2>
-                            <h3></h3>
-                            <p></p>
-                            <a href="">more</a>
+                        <div class="padd10 margin-btm">
+                            <h2 class="margin-btm">01</h2>
+                            <h3 class="margin-btm">Hight Quality</h3>
+                            <p class="margin-btm">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid nostrum maxime praesentium expedita illum culpa quibusdam similique tempora nobis? Deleniti libero quaerat vel neque officia laudantium tempore facere ipsa in.</p>
+                            <a class="bg-lightpurple border-r benefits-btn" href="">more</a>
                         </div>
                     </div>
                     <div class="bg-white border-r benefits margin-btm">
-                        <div class="padd10">
-                            <h2>01</h2>
-                            <h3></h3>
-                            <p></p>
-                            <a href="">more</a>
+                        <div class="padd10 margin-btm">
+                            <h2 class="margin-btm">02</h2>
+                            <h3 class="margin-btm">Creative team</h3>
+                            <p class="margin-btm">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid nostrum maxime praesentium expedita illum culpa quibusdam similique tempora nobis? Deleniti libero quaerat vel neque officia laudantium tempore facere ipsa in.</p>
+                            <a class="bg-lightpurple border-r benefits-btn" href="">more</a>
                         </div>
                     </div>
                     <div class="bg-white border-r benefits margin-btm">
-                        <div class="padd10">
-                            <h2>01</h2>
-                            <h3></h3>
-                            <p></p>
-                            <a href="">more</a>
+                        <div class="padd10 margin-btm">
+                            <h2 class="margin-btm">03</h2>
+                            <h3 class="margin-btm">Amazing Result</h3>
+                            <p class="margin-btm">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid nostrum maxime praesentium expedita illum culpa quibusdam similique tempora nobis? Deleniti libero quaerat vel neque officia laudantium tempore facere ipsa in.</p>
+                            <a class="bg-lightpurple border-r benefits-btn" href="">more</a>
                         </div>
                     </div>
                     <div class="bg-white border-r benefits margin-btm">
-                        <div class="padd10">
-                            <h2>01</h2>
-                            <h3></h3>
-                            <p></p>
-                            <a href="">more</a>
+                        <div class="padd10 margin-btm">
+                            <h2 class="margin-btm">04</h2>
+                            <h3 class="margin-btm">Best Pricing</h3>
+                            <p class="margin-btm">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid nostrum maxime praesentium expedita illum culpa quibusdam similique tempora nobis? Deleniti libero quaerat vel neque officia laudantium tempore facere ipsa in.</p>
+                            <a class="bg-lightpurple border-r benefits-btn" href="">more</a>
                         </div>
                     </div>
                     <div class="bg-white border-r benefits margin-btm">
-                        <div class="padd10">
-                            <h2>01</h2>
-                            <h3></h3>
-                            <p></p>
-                            <a href="">more</a>
+                        <div class="padd10 margin-btm">
+                            <h2 class="margin-btm">05</h2>
+                            <h3 class="margin-btm">Innovation</h3>
+                            <p class="margin-btm">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid nostrum maxime praesentium expedita illum culpa quibusdam similique tempora nobis? Deleniti libero quaerat vel neque officia laudantium tempore facere ipsa in.</p>
+                            <a class="bg-lightpurple border-r benefits-btn" href="">more</a>
                         </div>
                     </div>
                     <div class="bg-white border-r benefits margin-btm">
-                        <div class="padd10">
-                            <h2>01</h2>
-                            <h3></h3>
-                            <p></p>
-                            <a href="">more</a>
+                        <div class="padd10 margin-btm">
+                            <h2 class="margin-btm">06</h2>
+                            <h3 class="margin-btm">24/7 Support</h3>
+                            <p class="margin-btm">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid nostrum maxime praesentium expedita illum culpa quibusdam similique tempora nobis? Deleniti libero quaerat vel neque officia laudantium tempore facere ipsa in.</p>
+                            <a class="bg-lightpurple border-r benefits-btn" href="">more</a>
                         </div>
                     </div>
                 </div>
@@ -162,15 +171,15 @@
         <!--about us-->
         <div class="container disp-flex-column about-us">
             <div>
-                <h2>about us</h2>
+                <h2 class="margin-btm">about us</h2>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure nulla odit, ab incidunt, quia dicta a sint accusamus molestiae veniam ipsum velit? Dolorum asperiores nam debitis enim, natus deleniti iusto?</p>
                 <br>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, placeat quibusdam a exercitationem odit assumenda maxime sunt cupiditate molestiae dolore dolorum modi omnis beatae impedit debitis magnam possimus molestias quia?</p>
+                <p class="margin-btm">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, placeat quibusdam a exercitationem odit assumenda maxime sunt cupiditate molestiae dolore dolorum modi omnis beatae impedit debitis magnam possimus molestias quia?</p>
             </div>
             <div class="disp-flex-column">
-                <img src="img/item1.svg" alt="">
-                <p></p>
-                <a href=""></a>
+                <img class="margin-btm" src="img/about.jpg" alt="">
+                <h3 class="margin-btm">I help companies Lorem ipsum dolor sit amet consectetur adipisicing elit</h3>
+                <a class="bg-lightpurple border-r benefits-btn" href=""><i class="fa-brands fa-linkedin"></i> Find me on linkedin</a>
             </div>
         </div>
     </main>
