--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <h2 class="margin-btm">Strategic Planning</h2>
                     <p class="margin-btm">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime illum nostrum asperiores debitis? Vitae atque id perspiciatis nostrum magni at officia eum voluptatem unde! Provident iusto consequatur aspernatur vero tempore.</p>
                 </div>
-                <div class="padd10 bg-white border-r disp-flex-column align-center">
+                <div class="planning2 padd10 bg-white border-r disp-flex-column align-center">
                     <img class="place-holder" src="img/planning2.png" alt="">
                     <h2 class="margin-btm">App Developement</h2>
                     <p class="margin-btm">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum nostrum nam, nesciunt adipisci ullam blanditiis, ea similique quam, facere qui eos unde iusto harum quae. Alias quas itaque atque id?</p>
@@ -169,19 +169,40 @@
         </div>
 
         <!--about us-->
-        <div class="container disp-flex-column about-us">
-            <div>
-                <h2 class="margin-btm">about us</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure nulla odit, ab incidunt, quia dicta a sint accusamus molestiae veniam ipsum velit? Dolorum asperiores nam debitis enim, natus deleniti iusto?</p>
-                <br>
-                <p class="margin-btm">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, placeat quibusdam a exercitationem odit assumenda maxime sunt cupiditate molestiae dolore dolorum modi omnis beatae impedit debitis magnam possimus molestias quia?</p>
-            </div>
-            <div class="disp-flex-column">
-                <img class="margin-btm" src="img/about.jpg" alt="">
-                <h3 class="margin-btm">I help companies Lorem ipsum dolor sit amet consectetur adipisicing elit</h3>
-                <a class="bg-lightpurple border-r benefits-btn" href=""><i class="fa-brands fa-linkedin"></i> Find me on linkedin</a>
+        <div class="container disp-flex-column about-us margin-btm">
+            <div class="about-us-media">
+                <div class="about-us-p">
+                    <h2 class="margin-btm">About us</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis molestiae qui dolorum vero, sed inventore vel ipsam nihil vitae adipisci amet, porro ipsum! Minima, aperiam? Libero ea officia vel voluptate! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure nulla odit, ab incidunt, quia dicta a sint accusamus molestiae veniam ipsum velit? Dolorum asperiores nam debitis enim, natus deleniti iusto?</p>
+                    <br>
+                    <p class="margin-btm">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo molestias optio velit temporibus quod dolorem asperiores eum minus alias eaque praesentium ullam exercitationem, aut qui aliquam repellendus cupiditate quisquam. Unde. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, placeat quibusdam a exercitationem odit assumenda maxime sunt cupiditate molestiae dolore dolorum modi omnis beatae impedit debitis magnam possimus molestias quia?</p>
+                </div>
+                <div class="disp-flex-column about-us-linkedin">
+                    <img class="margin-btm" src="img/about.jpg" alt="">
+                    <h3 class="margin-btm">I help companies Lorem ipsum dolor sit amet consectetur adipisicing elit</h3>
+                    <a class="bg-lightpurple border-r benefits-btn" href=""><i class="fa-brands fa-linkedin"></i> Find me on linkedin</a>
+                </div>
             </div>
         </div>
+
+        <!--get started-->
+        <div class="bg-lightpurple">
+            <div class="container get-started">
+                <div class="margin-btm get-started-tras">GET STARTED</div>
+                <h3 class="margin-btm">Simple, Trasparent Pricing</h3>
+                <h2 class="margin-btm">It's Free!</h2>
+                <p class="margin-btm">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati amet magnam sequi voluptatem facilis. Animi suscipit debitis expedita vel maxime culpa, numquam, magni nostrum aperiam aliquid, assumenda inventore dicta sunt.</p>
+                <div class="margin-btm"><a class="button border-r bg-white" href=""><strong>Get Started</strong></a></div>
+                <div class="margin-btm">Copyright 2021 Boolean - class XX - Privacy Policy</div>
+            </div>
+        </div>
+
+        <footer class="bg-footer padding-btm">
+            <div class="get-started container">
+                <p class="margin-btm">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo rem illo repudiandae, quo tempore vero ratione quaerat ut magni earum voluptate est eius. Expedita necessitatibus qui ea, laboriosam facere magnam.</p>
+            </div>
+            <div><a href="">Lorem ipsum </a>dolor sit amet consectetur<a href=""> Boolean careers</a></div>
+        </footer>
     </main>
 </body>
 </html>
